--- a/src/main/webapp/WEB-INF/templates/mainLayout.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainLayout.xhtml
@@ -7,6 +7,7 @@
       xmlns:p="http://primefaces.org/ui"
         >
 <!--@elvariable id="pageName" type="java.lang.String"-->
+<!-- new commit -->
 <f:view locale="lt">
     <h:head>
         <meta charset="UTF-8"/>
