--- a/src/main/webapp/WEB-INF/templates/mainLayout.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainLayout.xhtml
@@ -7,7 +7,6 @@
       xmlns:p="http://primefaces.org/ui"
         >
 <!--@elvariable id="pageName" type="java.lang.String"-->
-<!-- new commit -->
 <f:view locale="lt">
     <h:head>
         <meta charset="UTF-8"/>
@@ -21,7 +20,7 @@
                     <p:panel header="Header">
                         <h:outputText value="Authenticated user: #{authenticatedUser.userName} / #{authenticatedUser.firstName} #{authenticatedUser.lastName} / roles: #{authenticatedUser.groups}"
                                       rendered="#{user.authenticated}"/>
-                        <h:outputText value="Not authenticated"
+                        <h:outputText value="Neautentifikuotas"
                                       rendered="#{!user.authenticated}"/>
                         <br/>
                         <h:link value="Login" outcome="/login.xhtml" rendered="#{!user.authenticated}"/>
